--- a/build.gradle
+++ b/build.gradle
@@ -259,6 +259,7 @@ buildscript {
 		classpath name: "org.eclipse.jdt.core_3.10.0.v20140604-1726"
 		classpath name: "org.eclipse.equinox.registry_3.5.400.v20140428-1507"
 		
+		// Needed for GenerateJAXBTask
 		classpath "com.sun.xml.bind:jaxb-xjc:2.2.5-2"
 		classpath "com.sun.xml.bind:jaxb-impl:2.2.5-2"
 		classpath "javax.xml.bind:jaxb-api:2.2.+"
