--- a/build.gradle
+++ b/build.gradle
@@ -121,38 +121,34 @@ jar {
 }
 
 gradle.taskGraph.whenReady { taskGraph ->
-	if (taskGraph.allTasks.any { it instanceof Sign }) {
-		// signingKeyId, signingPassword, secretKeyFile should be define out of the repository
-		// either on the command-line via
+	if (taskGraph.allTasks.any { it instanceof Upload }) {
+		// signingKeyId, signingPassword, secretKeyFile, ossrhUsername, ossrhPassword
+		// should be define out of the repository either on the command-line via
 		//
-		// gradle -DsigningKeyId=value -DsigningPassword=value -DsecretKeyFile=value
+		// gradle -DsigningKeyId=value -DsigningPassword=value -DsecretKeyFile=value -DossrhUsername=value -DossrhPassword=value
 		//
 		// or via ~/.gradle/gradle.properties as 
 		//
 		// systemProp.signingKeyId=value
 		// systemProp.signingPassword=value=value
 		// systemProp.secretKeyFile=value
+		// systemProp.ossrhUsername=value
+		// systemProp.ossrhPassword=value
 		
 		allprojects { ext."signing.keyId" = System.properties["signingKeyId"] ?: "change me but not here" }
 		allprojects { ext."signing.password" = System.properties["signingPassword"] ?: "change me but not here" }
 		allprojects { ext."signing.secretKeyRingFile" = System.properties["secretKeyFile"] ?: "change me but not here" }
-	}
-
-	if (taskGraph.allTasks.any { it instanceof Upload }) {
-		// ossrhUsername, ossrhPassword should be define out of the repository
-		// either on the command-line via
-		//
-		// gradle -DossrhUsername=value -DossrhPassword=value
-		//
-		// or via ~/.gradle/gradle.properties as 
-		//
-		// systemProp.ossrhUsername=value
-		// systemProp.ossrhPassword=value
 		
 		allprojects { ext."ossrhUsername" = System.properties["ossrhUsername"] ?: "change me but not here" }
 		allprojects { ext."ossrhPassword" = System.properties["ossrhPassword"] ?: "change me but not here" }
 		
 		allprojects { 
+			
+			signing {
+				// required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
+				sign configurations.archives
+			}
+			
 			uploadArchives {
 				repositories {
 					mavenDeployer {
@@ -200,11 +196,6 @@ gradle.taskGraph.whenReady { taskGraph ->
 			}
 		}
 	}
-}
-
-signing {
-	// required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
-	sign configurations.archives
 }
 
 javadoc {
